# AIEngAssistant

./: .gitignore  CLAUDE.md  FIREBASE.md  GEMINI.md  INTEGRATION_COMPLETE.md  LICENSE  LLAMA_INTEGRATION.md  MODEL_SETUP_GUIDE.md  README.md  REAL_TIME_PROCESSING_IMPLEMENTATION.md  SETUP.md  TEXT_PROCESSING_FEATURES.md  settings.gradle.kts
.claude/: settings.local.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/: README.md
composeApp/src/androidMain/cpp/: CMakeLists.txt  llama-android.cpp
composeApp/src/androidMain/kotlin/com/ai/english/assistant/: MainActivity.kt  Platform.android.kt  SuggestionServiceProvider.android.kt  SuggestionsService.kt
composeApp/src/androidMain/res/drawable/: splash_icon.xml
composeApp/src/androidMain/res/values/: colors.xml  strings.xml  themes.xml
composeApp/src/commonMain/kotlin/com/ai/english/assistant/: App.kt  HeaderComponents.kt  Platform.kt  SuggestionContract.kt  SuggestionServiceProvider.kt  TextEditorScreen.kt  TextProcessor.kt  WritingAssistantScreen.kt  WritingModeComponents.kt
composeApp/src/debug/: google-services.json.template
composeApp/src/iosMain/kotlin/com/ai/english/assistant/: MainViewController.kt  Platform.ios.kt
composeApp/src/jvmMain/kotlin/com/ai/english/assistant/: Platform.jvm.kt  SuggestionServiceProvider.jvm.kt  main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+36 files in other folders)
